--- a/resumes/templates/resumes/validate_resume.html
+++ b/resumes/templates/resumes/validate_resume.html
@@ -209,7 +209,7 @@
                                                         <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
                                                     </svg>
                                                     <div>
-                                                        <span class="font-semibold text-red-900">{{ field|title|replace:"_":" " }}:</span>
+                                                        <span class="font-semibold text-red-900">{{ field|title|underscore_to_space }}:</span>
                                                         <span class="text-red-700 ml-1">{{ error }}</span>
                                                     </div>
                                                 </div>
