Fix: Replace all remaining 'replace' filter instances with 'underscore_to_space'

--- a/resumes/templates/resumes/validate_resume.html
+++ b/resumes/templates/resumes/validate_resume.html
@@ -235,7 +235,7 @@
                                                                 <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
                                                             </svg>
                                                             <div>
-                                                                <span class="font-semibold text-red-900">Experience {{ forloop.parentloop.counter }} - {{ field|title|replace:"_":" " }}:</span>
+                                                                <span class="font-semibold text-red-900">Experience {{ forloop.parentloop.counter }} - {{ field|title|underscore_to_space }}:</span>
                                                                 <span class="text-red-700 ml-1">{{ error }}</span>
                                                             </div>
                                                         </div>
@@ -263,7 +263,7 @@
                                                                 <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
                                                             </svg>
                                                             <div>
-                                                                <span class="font-semibold text-red-900">Education {{ forloop.parentloop.counter }} - {{ field|title|replace:"_":" " }}:</span>
+                                                                <span class="font-semibold text-red-900">Education {{ forloop.parentloop.counter }} - {{ field|title|underscore_to_space }}:</span>
                                                                 <span class="text-red-700 ml-1">{{ error }}</span>
                                                             </div>
                                                         </div>
@@ -291,7 +291,7 @@
                                                                 <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
                                                             </svg>
                                                             <div>
-                                                                <span class="font-semibold text-red-900">Skill {{ forloop.parentloop.counter }} - {{ field|title|replace:"_":" " }}:</span>
+                                                                <span class="font-semibold text-red-900">Skill {{ forloop.parentloop.counter }} - {{ field|title|underscore_to_space }}:</span>
                                                                 <span class="text-red-700 ml-1">{{ error }}</span>
                                                             </div>
                                                         </div>
@@ -319,7 +319,7 @@
                                                                 <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
                                                             </svg>
                                                             <div>
-                                                                <span class="font-semibold text-red-900">Project {{ forloop.parentloop.counter }} - {{ field|title|replace:"_":" " }}:</span>
+                                                                <span class="font-semibold text-red-900">Project {{ forloop.parentloop.counter }} - {{ field|title|underscore_to_space }}:</span>
                                                                 <span class="text-red-700 ml-1">{{ error }}</span>
                                                             </div>
                                                         </div>
@@ -348,7 +348,7 @@
                                                                     <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
                                                                 </svg>
                                                                 <div>
-                                                                    <span class="font-semibold text-red-900">Certification {{ forloop.parentloop.counter }} - {{ field|title|replace:"_":" " }}:</span>
+                                                                    <span class="font-semibold text-red-900">Certification {{ forloop.parentloop.counter }} - {{ field|title|underscore_to_space }}:</span>
                                                                     <span class="text-red-700 ml-1">{{ error }}</span>
                                                                 </div>
                                                             </div>
@@ -374,7 +374,7 @@
                                                                     <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
                                                                 </svg>
                                                                 <div>
-                                                                    <span class="font-semibold text-red-900">Achievement {{ forloop.parentloop.counter }} - {{ field|title|replace:"_":" " }}:</span>
+                                                                    <span class="font-semibold text-red-900">Achievement {{ forloop.parentloop.counter }} - {{ field|title|underscore_to_space }}:</span>
                                                                     <span class="text-red-700 ml-1">{{ error }}</span>
                                                                 </div>
                                                             </div>
@@ -400,7 +400,7 @@
                                                                     <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
                                                                 </svg>
                                                                 <div>
-                                                                    <span class="font-semibold text-red-900">Language {{ forloop.parentloop.counter }} - {{ field|title|replace:"_":" " }}:</span>
+                                                                    <span class="font-semibold text-red-900">Language {{ forloop.parentloop.counter }} - {{ field|title|underscore_to_space }}:</span>
                                                                     <span class="text-red-700 ml-1">{{ error }}</span>
                                                                 </div>
                                                             </div>
@@ -426,7 +426,7 @@
                                                                     <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
                                                                 </svg>
                                                                 <div>
-                                                                    <span class="font-semibold text-red-900">Hobby {{ forloop.parentloop.counter }} - {{ field|title|replace:"_":" " }}:</span>
+                                                                    <span class="font-semibold text-red-900">Hobby {{ forloop.parentloop.counter }} - {{ field|title|underscore_to_space }}:</span>
                                                                     <span class="text-red-700 ml-1">{{ error }}</span>
                                                                 </div>
                                                             </div>
